# ConservationLaws

./: AnalyticalSolution.cpp  AnalyticalSolution.hpp  Aux.hpp  CMakeLists.txt  Geometry.cpp  Geometry.hpp  Godunov.cpp  Godunov.hpp  Solver.cpp  Solver.hpp  initial.cpp  initial.hpp  main.cpp  pictures\data0.500000  res.txt  video.ogv
CUDA/: CUDA_solver.cu
OpenMP/: Solver.cpp
